# ase-ingestion-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  full_task.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
docs/: data-flow.md  deployment-poc.md  ml-architecture.md  recommendation-aggregation.md
frontend/: .env.example  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
infra/: bootstrap.sh
infra/cloudformation/: compute.yaml  ec2.yaml  iam.yaml  iot.yaml  networking.yaml  observability.yaml  root.yaml  streaming.yaml
infra/prometheus/: alert_rules.yml  prometheus.yml
infra/scripts/: deploy-ec2.sh  teardown-ec2.sh
scripts/: compact_delta.py  compact_parquet.py  seed_devices.py
specs/001-health-intelligence-poc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-credits-reward-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ml-recommendation-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-adapter-retry/: data-model.md  plan.md  research.md  spec.md  tasks.md
src/: config.py
src/api/: dependencies.py  http_client.py  main.py
src/credits/: config_service.py  earning_service.py  ledger.py  models.py  tier_engine.py
src/db/: base.py
src/digital_twin/: interfaces.py  iot_core_adapter.py  local_registry_adapter.py  registry.py
src/ingestion/: delta_writer.py  interfaces.py  parquet_writer.py  publisher.py  validator.py
src/ml/: anomaly_detector.py  distributor.py  feature_store.py  interfaces.py  registry.py  reranker.py
src/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/recommendation/: aggregator.py  delta_writer.py  interfaces.py  models.py  normalizer.py  retry.py
src/stream_consumer/: consumer.py
tests/: conftest.py
tests/contract/: test_devices_contract.py  test_service1_contract.py  test_service2_contract.py  test_service3_contract.py
tests/integration/: test_activity_earning.py  test_credits_config.py  test_credits_tier.py  test_device_credits_api.py  test_device_registration.py  test_ingest_http.py  test_metrics.py  (+2 more)
(+92 files in other folders)
