[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-intelligence-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # AWS
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    # HTTP client
    "httpx>=0.27.0",
    # MQTT
    "aiomqtt>=2.3.0",
    # Redis
    "redis[asyncio]>=5.0.0",
    # Observability
    "structlog>=24.2.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "prometheus-client>=0.20.0",
    # Delta Lake event archive
    "deltalake>=0.20.0",
    "pyarrow>=16.0.0",
    # ML evaluation metrics
    "scikit-learn>=1.4",
    # ML numerical operations
    "numpy>=1.26",
    # TFLite model generation via flatbuffers (pure Python, works on all architectures)
    "flatbuffers>=24.3",
    # Utilities
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "moto[iot,kinesis,s3,core]>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "greenlet>=3.0.0",
    "fakeredis[aioredis]>=2.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "contract: marks tests as contract tests (requires internet)",
    "integration: marks tests as integration tests (requires Docker)",
    "unit: marks tests as unit tests (no external deps)",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/db/migrations/*"]

[tool.coverage.report]
fail_under = 80
